fixed stem airship alignment

--- a/assets/styles/atc.css
+++ b/assets/styles/atc.css
@@ -981,13 +981,6 @@ section.QHSE {
   background-color: #1207AB;
   padding-top: 8vh;
   padding-bottom: 8vh;
-  /*     p {
-      @media screen and (min-width: $tablet) and (max-width: $laptop) {
-        width: 150%;
-        transform: translate(18%, 9%);
-      }
-    }
-  */
 }
 
 section.QHSE * {
@@ -1015,8 +1008,8 @@ section.QHSE img {
 
 @media only screen and (min-width: 768px) {
   section.QHSE img {
-    -webkit-transform: translateY(-25%);
-            transform: translateY(-25%);
+    -webkit-transform: translateY(-20%);
+            transform: translateY(-20%);
     width: 50%;
   }
 }
@@ -1027,6 +1020,10 @@ section.stem {
 
 section.stem > div {
   padding: 2.5vh 5vw;
+}
+
+section.stem .note {
+  padding-top: 10vh;
 }
 
 section.stem .note a {
@@ -1042,11 +1039,8 @@ section.stem .note a {
 @media only screen and (min-width: 768px) {
   section.stem .note {
     width: 50%;
+    padding-top: 18vh;
   }
-}
-
-section.stem .kids {
-  margin: 8vh 0;
 }
 
 section.stem .kids img {
@@ -1077,14 +1071,14 @@ section.stem .kids img:hover {
 
 @media only screen and (min-width: 768px) {
   section.stem .kids {
-    margin: 18vh 0 -5vh;
+    margin: 12vh 0 -5vh;
   }
 }
 
 section.stem .gallery {
   height: 12vh;
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(-18.66%, #A5A6F6), color-stop(90.15%, rgba(252, 221, 236, 0)));
-  background-image: linear-gradient(0deg, #A5A6F6 -18.66%, rgba(252, 221, 236, 0) 90.15%);
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(-18.66%, #a5a6f6), color-stop(90.15%, rgba(252, 221, 236, 0)));
+  background-image: linear-gradient(0deg, #a5a6f6 -18.66%, rgba(252, 221, 236, 0) 90.15%);
   width: 100%;
   color: #150C21;
 }
@@ -1092,15 +1086,21 @@ section.stem .gallery {
 section.stem .gallery svg {
   margin-left: 5px;
   height: 50%;
-  width: 2.5%;
+  width: 5%;
+}
+
+@media only screen and (min-width: 768px) {
+  section.stem .gallery svg {
+    width: 2.5%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   section.stem {
     background-image: url("/assets/img/airship.svg");
     background-repeat: no-repeat;
-    background-size: 100% 150%;
-    background-position: center center;
+    background-size: 110% 120%;
+    background-position: left top;
   }
 }
 
@@ -1111,6 +1111,12 @@ section.workstation {
 @media only screen and (min-width: 768px) {
   section.workstation {
     margin-bottom: -6vh;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  section.workstation {
+    margin-top: -20vh;
   }
 }
 
@@ -1167,16 +1173,6 @@ section.workstation > div.contactUs h4 {
 
 section.workstation > div.contactUs a {
   border: 1px solid #fff;
-}
-
-.container {
-  margin: 6vh 0 3vh;
-}
-
-@media only screen and (min-width: 768px) {
-  .container {
-    margin: 22vh 0 3vh;
-  }
 }
 
 footer {
